--- a/CustomSAPFont/SAP-icons.css
+++ b/CustomSAPFont/SAP-icons.css
@@ -2,7 +2,7 @@
 @font-face {
 	font-family: 'SAP Fiori Icons';
 	src:
-		url('https://github.com/bbjino26/linhdmp.github.io/raw/main/SAP-icons.ttf') format('truetype');
+		url('https://linhdmp.github.io/CustomSAPFont/SAP-icons.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
